# python-package-manager-benchmark

./: .gitignore  README.md  environment-pypi.yml  environment.yml  pixi.toml  pyproject.toml  requirements.txt
benchmark/: report.py  runner.py
src/mlbench/: __init__.py  data.py  evaluate.py  model.py  serve.py  train.py
tests/: conftest.py  test_benchmark_utils.py  test_data.py  test_evaluate.py  test_model.py  test_report.py  test_serve.py  test_train.py
