[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlbench"
version = "0.1.0"
description = "Toy ML pipeline for benchmarking Python package managers"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "opencv-python-headless>=4.8",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "h5py>=3.9",
    "pillow>=10.0",
    "tqdm>=4.65",
    "jupyterlab>=4.0",
    "protobuf>=4.0",
    "transformers>=4.30",
    "datasets>=2.14",
    "wandb>=0.15",
    "albumentations>=1.3",
    "lightning>=2.0",
    "timm>=0.9",
    "onnx>=1.14",
    "onnxruntime>=1.15",
    "onnxscript>=0.1",
    "gradio>=4.0",
    "torchmetrics>=1.0",
    "safetensors>=0.3",
    "evaluate>=0.4",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
name = "mlbench"
version = "0.1.0"
description = "Toy ML pipeline for benchmarking Python package managers"
packages = [{ include = "mlbench", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = ">=2.0"
numpy = ">=1.24"
scipy = ">=1.11"
pandas = ">=2.0"
opencv-python-headless = ">=4.8"
scikit-learn = ">=1.3"
matplotlib = ">=3.7"
h5py = ">=3.9"
pillow = ">=10.0"
tqdm = ">=4.65"
jupyterlab = ">=4.0"
protobuf = ">=4.0"
transformers = ">=4.30"
datasets = ">=2.14"
wandb = ">=0.15"
albumentations = ">=1.3"
lightning = ">=2.0"
timm = ">=0.9"
onnx = ">=1.14"
onnxruntime = ">=1.15"
onnxscript = ">=0.1"
gradio = ">=4.0"
torchmetrics = ">=1.0"
safetensors = ">=0.3"
evaluate = ">=0.4"

[tool.poetry.group.test.dependencies]
pytest = ">=7.0"
pytest-timeout = ">=2.1"
